--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,53 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
+* {
+  font-family: "Roboto", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: white;
+}
+
+body {
+  background-color: #85DCBA;
+}
+
+#header {
+  display: flex;
+  justify-content: center;
+}
+
 #calculator {
   display: flex;
-  border: 2px solid rgb(149, 33, 149);
+  border: 5px solid #E27D60;
+  border-radius: 10PX;
+  background-color: #41B3A3;
   flex-direction: column;
   height: 450px;
 }
 
 #display {
   display: flex;
-  border: 2px solid rgb(149, 33, 149);
+  border-bottom: 4px solid #E27D60;
   flex-wrap: wrap;
   width: 100%;
   align-items: center;
   justify-content: right;
+  font-size: 25px;
 }
-#display h2 {
+#display p {
   margin-right: 3%;
+  font-size: 25px;
 }
 
 #buttonPad {
   display: flex;
   width: 100%;
   height: 100%;
-  border: 2px solid rgb(149, 33, 149);
   flex-wrap: wrap;
   justify-content: space-between;
 }
 #buttonPad button {
+  background-color: #C38D9E;
   width: 19%;
   height: 15%;
   margin: 1%;
   margin-top: 1%;
+  border-radius: 10px;
 }/*# sourceMappingURL=styles.css.map */
