--- a/styles.scss
+++ b/styles.scss
@@ -1,37 +1,58 @@
-$calculator-color: rgb(149, 33, 149);
-$page-color: darkblue;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+$calculator-color: #E27D60;
+$page-color: #85DCBA;
+$primary-font: "Roboto";
+$font-color: white; 
+$button-color: #C38D9E;
+ *{
+    font-family: $primary-font, 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: $font-color;
+}
+
+body {
+    background-color: $page-color;
+}
+
+#header{
+    display: flex;
+    justify-content: center;
+}
 
 #calculator{
     display: flex;
-    border: 2px solid $calculator-color;
+    border: 5px solid $calculator-color;
+    border-radius: 10PX;
+    background-color: #41B3A3;
     flex-direction: column;
     height: 450px;
 }
 
 #display{
     display: flex;
-    border: 2px solid $calculator-color;
+    border-bottom: 4px solid $calculator-color;
     flex-wrap: wrap;
     width: 100%;
     align-items: center;
     justify-content: right;
-
-    h2{
+    font-size: 25px;
+    p{
         margin-right: 3%;
+        font-size: 25px;
     }
 }
 #buttonPad {
     display: flex;
     width: 100%;
     height: 100%;
-    border: 2px solid $calculator-color;
     flex-wrap: wrap;
     justify-content: space-between;
-
+    
     button{
+        background-color: $button-color;
         width: 19%;
         height: 15%;
         margin: 1%;
         margin-top: 1%;
+        border-radius: 10px;
     }
 }
