--- a/styles.scss
+++ b/styles.scss
@@ -57,7 +57,18 @@ body {
     }
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 1023px){
+    body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #calculator {
+        width: 90%;
+        margin-top: 50px
+    }
 
     #display{
         p{
@@ -75,6 +86,31 @@ body {
     }
 }
 
-@media screen and (min-width: 1440px){
+@media screen and (min-width: 768px){
 
+    body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #calculator {
+        width: 50%;
+    }
+
+    #display{
+        p{
+            font-size: 35px;
+        }
+    }
+
+    #buttonPad{
+        button{
+            margin: .5%;
+            width: 23%;
+            height: 17%;
+            font-size: 25px;
+        }
+    }
 }
