--- a/styles.scss
+++ b/styles.scss
@@ -1,116 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
-$calculator-color: #E27D60;
-$page-color: #85DCBA;
-$primary-font: "Roboto";
-$font-color: white; 
-$button-color: #C38D9E;
- *{
-    font-family: $primary-font, 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color: $font-color;
-}
-
-body {
-    background-color: $page-color;
-}
-
-#header{
-    display: flex;
-    justify-content: center;
-}
-
-#calculator{
-    display: flex;
-    border: 5px solid $calculator-color;
-    border-radius: 10PX;
-    background-color: #41B3A3;
-    flex-direction: column;
-    height: 450px;
-}
-
-#display{
-    display: flex;
-    border-bottom: 4px solid $calculator-color;
-    flex-wrap: wrap;
-    width: 100%;
-    align-items: center;
-    justify-content: right;
-    font-size: 25px;
-    p{
-        margin-right: 3%;
-        font-size: 25px;
-    }
-}
-#buttonPad {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    
-    button{
-        background-color: $button-color;
-        width: 19%;
-        height: 15%;
-        margin: 1%;
-        margin-top: 1%;
-        border-radius: 10px;
-    }
-}
-
-@media screen and (min-width: 1023px){
-    body {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    #calculator {
-        width: 90%;
-        margin-top: 50px
-    }
-
-    #display{
-        p{
-            font-size: 35px;
-        }
-    }
-
-    #buttonPad{
-        button{
-            margin: .5%;
-            width: 23%;
-            height: 17%;
-            font-size: 25px;
-        }
-    }
-}
-
-@media screen and (min-width: 768px){
-
-    body {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    #calculator {
-        width: 50%;
-    }
-
-    #display{
-        p{
-            font-size: 35px;
-        }
-    }
-
-    #buttonPad{
-        button{
-            margin: .5%;
-            width: 23%;
-            height: 17%;
-            font-size: 25px;
-        }
-    }
-}
+@import "./base";
+@import "./components";
+@import "./layout";
