--- a/_base.scss
+++ b/_base.scss
@@ -67,3 +67,16 @@ $button-color: #C38D9E;
         }
     }
 }
+
+@media screen and (min-width: 400px){
+    body {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    #calculator {
+        width: 50%;
+    }
+}
