--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,18 @@
     font-size: 25px;
   }
 }
+@media screen and (min-width: 400px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  #calculator {
+    width: 50%;
+  }
+}
 #header {
   display: flex;
   justify-content: center;
