Added/changed some more stylings

--- a/_base.scss
+++ b/_base.scss
@@ -3,7 +3,8 @@ $calculator-color: #E27D60;
 $page-color: #85DCBA;
 $primary-font: "Roboto";
 $font-color: white; 
-$button-color: #C38D9E;
+$number-button-color: #EA4C89;
+$operand-button-color:#fa6400;
  *{
     font-family: $primary-font, 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: $font-color;
