--- a/styles.css
+++ b/styles.css
@@ -72,8 +72,11 @@
 }
 
 #display {
+  background-color: #124e46;
   display: flex;
-  border-bottom: 4px solid #E27D60;
+  border: 1px solid #4a968c;
+  margin-bottom: 2px;
+  border-radius: 10px;
   flex-wrap: wrap;
   width: 100%;
   align-items: center;
