Fixed some array bugs, and a display bug

--- a/_components.scss
+++ b/_components.scss
@@ -24,6 +24,7 @@
     align-items: center;
     justify-content: right;
     font-size: 25px;
+    min-height: 20%;
     p{
         margin-right: 3%;
         font-size: 25px;
