--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,37 @@
   color: white;
 }
 
+@media screen and (min-width: 400px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  #calculator {
+    width: 100%;
+  }
+}
+@media screen and (min-width: 760px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  #calculator {
+    width: 50%;
+  }
+  #display p {
+    font-size: 35px;
+  }
+  #buttonPad button {
+    margin: 0.5%;
+    width: 23%;
+    height: 17%;
+    font-size: 25px;
+  }
+}
 @media screen and (min-width: 1023px) {
   body {
     display: flex;
@@ -12,7 +43,7 @@
     align-items: center;
   }
   #calculator {
-    width: 90%;
+    width: 55%;
     margin-top: 50px;
   }
   #display p {
@@ -25,35 +56,15 @@
     font-size: 25px;
   }
 }
-@media screen and (min-width: 768px) {
-  body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+@media screen and (max-width: 750px) {
+  h4 {
+    display: none;
   }
-  #calculator {
-    width: 50%;
+  #stepsDisplay {
+    display: none;
   }
-  #display p {
-    font-size: 35px;
-  }
-  #buttonPad button {
-    margin: 0.5%;
-    width: 23%;
-    height: 17%;
-    font-size: 25px;
-  }
-}
-@media screen and (min-width: 400px) {
-  body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  #calculator {
-    width: 50%;
+  #stepsDisplay p {
+    display: none;
   }
 }
 #header {
@@ -103,6 +114,14 @@
   margin-top: 1%;
   border-radius: 10px;
   box-shadow: black 2px 2px 3px;
+}
+
+#stepsDisplay {
+  display: flex;
+  flex-direction: column;
+}
+#stepsDisplay p {
+  margin: 2px;
 }
 
 .numberButton {
